<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="cameras"
            type="com.miguelzaragoza.upm.dam.model.Cameras" />
        <variable
            name="cluster"
            type="Boolean" />
        <variable
            name="viewModel"
            type="com.miguelzaragoza.upm.dam.modules.ui.map.MapViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">
            <com.google.android.material.chip.Chip
                android:id="@+id/normal_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/title_normal" />
            <com.google.android.material.chip.Chip
                android:id="@+id/satellite_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_satellite" />
            <com.google.android.material.chip.Chip
                android:id="@+id/hybrid_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_hybrid" />
        </com.google.android.material.chip.ChipGroup>
        <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cameras="@{cameras}"
            app:cluster="@{cluster}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip_group"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/map_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/icon_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="@{() -> viewModel.setLocation()}"
                android:src="@drawable/ic_marker_off"
                android:contentDescription="@string/location" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>